--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
   flutter_cache_manager: ^3.3.1
   just_audio: ^0.9.37
   syncfusion_flutter_sliders: ^25.1.40
+  dio: ^5.1.2
+  path_provider: ^2.0.15
+  
 
 dev_dependencies:
   flutter_test:
