--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_cache_manager: ^3.3.1
+  
   just_audio: ^0.9.37
   syncfusion_flutter_sliders: ^25.1.40
-  dio: ^5.1.2
+  http: ^1.1.0 
   path_provider: ^2.0.15
   
 
